--- a/blog/content/1.md
+++ b/blog/content/1.md
@@ -33,4 +33,4 @@ Die Geschichte der öffentlich-rechtlichen Medien in Deutschland ist eine Geschi
 
 In einer Zeit, in der die Demokratie weltweit unter Druck gerät, in der Populismus und Extremismus zunehmen, ist die Rolle unabhängiger Medien wichtiger denn je. Die öffentlich-rechtlichen Sender haben das Potenzial, diese Rolle zu erfüllen. Ob sie es tun werden, hängt davon ab, ob sie bereit sind, sich selbst kritisch zu hinterfragen und notwendige Reformen anzugehen.
 
-Die Geschichte der öffentlich-rechtlichen Medien in Deutschland ist noch lange nicht zu Ende. Sie steht an einem Scheideweg. Die Entscheidungen, die in den kommenden Jahren getroffen werden, werden darüber bestimmen, ob sie auch in Zukunft eine zentrale Säule unserer demokratischen Öffentlichkeit sein werden. Es liegt an uns allen – Politikern, Medienschaffenden und Bürgern – dafür zu sorgen, dass die ursprüngliche Vision nicht verloren geht, sondern für das digitale Zeitalter neu interpretiert und gestärkt wird∎
+Die Geschichte der öffentlich-rechtlichen Medien in Deutschland ist noch lange nicht zu Ende. Sie steht an einem Scheideweg. Die Entscheidungen, die in den kommenden Jahren getroffen werden, werden darüber bestimmen, ob sie auch in Zukunft eine zentrale Säule unserer demokratischen Öffentlichkeit sein werden. Es liegt an uns allen – Politikern, Medienschaffenden und Bürgern – dafür zu sorgen, dass die ursprüngliche Vision nicht verloren geht, sondern für das digitale Zeitalter neu interpretiert und gestärkt wird.
