--- a/blog/content/1.md
+++ b/blog/content/1.md
@@ -5,11 +5,11 @@ subtitle = 'Eine kurze Geschichte über die Öffentlich Rechtlichen Medien'
 date = 2024-07-16T20:00:00+02:00
 draft = false
 +++
-**>>** In den Trümmern des Zweiten Weltkriegs, als Deutschland am Boden lag und seine Zukunft ungewiss war, entstand eine Institution, die das Informationslandschaft der Bundesrepublik für die kommenden Jahrzehnte prägen sollte: der öffentlich-rechtliche Rundfunk. Geboren aus dem Wunsch der Alliierten, ein demokratisches und unabhängiges Mediensystem zu etablieren, sollte er ein Bollwerk gegen Propaganda und politische Einflussnahme sein. Doch wie so oft in der Geschichte, erwies sich der Weg von der Idee zur Realität als kompliziert und voller Herausforderungen.
+In den Trümmern des Zweiten Weltkriegs, als Deutschland am Boden lag und seine Zukunft ungewiss war, entstand eine Institution, die das Informationslandschaft der Bundesrepublik für die kommenden Jahrzehnte prägen sollte: der öffentlich-rechtliche Rundfunk. Geboren aus dem Wunsch der Alliierten, ein demokratisches und unabhängiges Mediensystem zu etablieren, sollte er ein Bollwerk gegen Propaganda und politische Einflussnahme sein. Doch wie so oft in der Geschichte, erwies sich der Weg von der Idee zur Realität als kompliziert und voller Herausforderungen.
 
 Die Anfänge waren vielversprechend. Inspiriert vom britischen BBC-Modell, wurden Rundfunkanstalten gegründet, die dem Gemeinwohl verpflichtet sein sollten. Der Nordwestdeutsche Rundfunk (NWDR) machte 1945 den Anfang, gefolgt von weiteren regionalen Sendern. Die Idee war einfach und überzeugend: Eine von Staatseinfluss und kommerziellen Interessen unabhängige Medienlandschaft sollte die Demokratie stärken und die Bürger umfassend informieren.
 
-Doch schon bald zeigte sich, dass die Realität komplexer war. Die föderale Struktur Deutschlands spiegelte sich in der Vielfalt der Rundfunkanstalten wider, was einerseits regionale Vielfalt garantierte, andererseits aber auch zu Redundanzen und Ineffizienzen führte. Die Finanzierung durch Gebühren, später durch den Rundfunkbeitrag, sollte Unabhängigkeit sichern, führte aber auch zu Debatten über die Verwendung öffentlicher Gelder
+Doch schon bald zeigte sich, dass die Realität komplexer war. Die föderale Struktur Deutschlands spiegelte sich in der Vielfalt der Rundfunkanstalten wider, was einerseits regionale Vielfalt garantierte, andererseits aber auch zu Redundanzen und Ineffizienzen führte. Die Finanzierung durch Gebühren, später durch den Rundfunkbeitrag, sollte Unabhängigkeit sichern, führte aber auch zu Debatten über die Verwendung öffentlicher Gelder.
 
 Die 1950er und 60er Jahre waren geprägt von einem Aufbau und einer Expansion des Systems. Die ARD wurde 1950 als Arbeitsgemeinschaft der öffentlich-rechtlichen Rundfunkanstalten gegründet, das ZDF folgte 1963 als zweites nationales Programm. Diese Zeit war auch geprägt von politischen Auseinandersetzungen um Einfluss und Kontrolle. Der "Adenauer-Fernsehen"-Streit von 1960 zeigte deutlich, wie dünn die Linie zwischen staatlicher Aufsicht und politischer Einflussnahme sein konnte.
 
