--- a/blog/content/1.md
+++ b/blog/content/1.md
@@ -5,7 +5,7 @@ subtitle = 'Eine kurze Geschichte über die Öffentlich Rechtlichen Medien'
 date = 2024-07-16T20:00:00+02:00
 draft = false
 +++
-In den Trümmern des Nachkriegsdeutschlands entstand eine Institution, die das Informationslandschaft der Bundesrepublik nachhaltig prägen sollte: der öffentlich-rechtliche Rundfunk. Geboren aus dem Wunsch der Alliierten, ein demokratisches und unabhängiges Mediensystem zu etablieren, sollte er ein **Bollwerk gegen Propaganda** und politische Einflussnahme sein. Doch der Weg von der Vision zur Realität erwies sich als steinig und voller Widersprüche.
+In den Trümmern des Nachkriegsdeutschlands entstand eine Institution, die die Informationslandschaft der Bundesrepublik nachhaltig prägen sollte: der öffentlich-rechtliche Rundfunk. Geboren aus dem Wunsch der Alliierten, ein demokratisches und unabhängiges Mediensystem zu etablieren, sollte er ein **Bollwerk gegen Propaganda** und politische Einflussnahme sein. Doch der Weg von der Vision zur Realität erwies sich als steinig und voller Widersprüche.
 
 Die Anfänge waren vielversprechend. Inspiriert vom britischen _BBC-Modell_, wurden Rundfunkanstalten gegründt, die dem Gemeinwohl verpflichtet sein sollten. Der _Nordwestdeutsche Rundfunk (NWDR)_ machte 1945 den Anfang, gefolgt von weiteren regionalen Sendern. Die Idee war überzeugend: Eine von Staatseinfluss und kommerziellen Interessen unabhängige Medienlandschaft sollte die **Demokratie stärken** und die Bürger umfassend informieren.
 
