--- a/blog/content/1.md
+++ b/blog/content/1.md
@@ -4,6 +4,8 @@ title = 'Zwischen Auftrag und Kritik: Die Metamorphose des deutschen Rundfunks'
 subtitle = 'Eine kurze Geschichte über die Öffentlich Rechtlichen Medien'
 date = 2024-07-16T20:00:00+02:00
 draft = false
+no = '1'
+edition = 'die meinung'
 +++
 Die Geschichte des öffentlich-rechtlichen Rundfunks in Deutschland liest sich wie ein Spiegelbild der Nachkriegsgesellschaft - voller Höhen und Tiefen, geprägt von großen Idealen und ernüchternden Realitäten.
 
