--- a/blog/content/1.md
+++ b/blog/content/1.md
@@ -6,6 +6,7 @@ slug = '0925629cbc'
 draft = false
 number = '1'
 edition = 'die meinung'
+categories = ["medien", "politik"]
 +++
 Im Schatten der Nachkriegstrümmer erblickte ein Medienimperium das Licht der Welt, das bis heute tief in den Taschen der Bürger wühlt: die öffentlich-rechtlichen Rundfunkanstalten. Unter dem **Deckmantel der "Umerziehung"** von den Alliierten ins Leben gerufen, mauserten sich _ARD_, _ZDF_ und Co. zu einem Medienkoloss, dessen{{< rawhtml >}}<span style="color: var(--n);">Pracht</span>{{< /rawhtml >}} selbst die kühnsten Träume der Nachkriegsplaner in den Schatten stellt.
 
