--- a/blog/content/1.md
+++ b/blog/content/1.md
@@ -1,5 +1,5 @@
 +++
-title = 'Die Propagandamaschine der Republik'
+title = 'Propagandamaschine der Republik'
 subtitle = 'Eine kurze Geschichte über die Öffentlich Rechtlichen Medien'
 date = 2024-07-17T20:00:00+02:00
 slug = '0925629CBC'
