--- a/blog/content/2.md
+++ b/blog/content/2.md
@@ -1,5 +1,5 @@
 +++
-title = 'Im Kraftwerk der Lügen'
+title = 'Kraftwerk der Lügen'
 subtitle = 'Die verschwiegene Wahrheit über Deutschlands Energiezukunft'
 date = 2024-07-22T10:00:00+02:00
 slug = 'FE23F8ADC4'
