--- a/blog/content/3.md
+++ b/blog/content/3.md
@@ -1,5 +1,5 @@
 +++
-title = 'Code der Macht: Das Ringen um die Kontrolle von KI'
+title = 'Code der Macht'
 subtitle = 'Open Source als Ausweg aus der digitalen Oligarchie'
 date = 2024-07-31T19:00:00+02:00
 slug = '0F9429FEA3'
