--- a/blog/content/3.md
+++ b/blog/content/3.md
@@ -7,7 +7,7 @@ draft = false
 number = '3'
 edition = 'die meinung'
 categories = ["tech", "künstliche intelligenz"]
-image = '/images/3.jpg'
+image = '/images/3.webp'
 alt = 'Ein Roboter, dessen Gesicht zur Hälfte hinter einem Vorhang verborgen, zur Hälfte sichtbar ist.'
 +++
 In den Tiefen des _Silicon Valley_, wo Bits und Bytes die neue Währung sind, braut sich eine Revolution zusammen. Künstliche Intelligenz, einst Science-Fiction, ist nun greifbare Realität. Doch wer kontrolliert diese mächtige Technologie? Während Tech-Giganten ihre KI-Modelle wie Kronjuwelen hüten, wächst der Ruf nach Offenheit und Transparenz.
