--- a/blog/content/0925629CBC.md
+++ b/blog/content/0925629CBC.md
@@ -8,7 +8,7 @@ number = '1'
 edition = 'die meinung'
 categories = ["medien", "politik"]
 +++
-Im Schatten der Nachkriegstrümmer erblickte ein Medienimperium das Licht der Welt, das bis heute tief in den Taschen der Bürger wühlt: die öffentlich-rechtlichen Rundfunkanstalten. Unter dem **Deckmantel der "Umerziehung"** von den Alliierten ins Leben gerufen, mauserten sich _ARD_, _ZDF_ und Co. zu einem Medienkoloss, dessen{{< rawhtml >}}<span style="color: var(--n);">Pracht</span>{{< /rawhtml >}} selbst die kühnsten Träume der Nachkriegsplaner in den Schatten stellt.
+Im Schatten der Nachkriegstrümmer erblickte ein Medienimperium das Licht der Welt, das bis heute tief in den Taschen der Bürger wühlt: die öffentlich-rechtlichen Rundfunkanstalten. Unter dem **Deckmantel der "Umerziehung"** von den Alliierten ins Leben gerufen, mauserten sich _ARD_, _ZDF_ und Co. zu einem Medienkoloss, dessen{{< rawhtml >}}<span style="color: var(--n);">Pracht</span>{{< /rawhtml >}} selbst die kühnsten Träume der Nachkriegsplaner in den Schatten stellt. Pracht
 
 1950 schlug die Stunde Null für die _ARD_. Offiziell als **Bollwerk der Demokratie** gepriesen, entpuppte sie sich als subtiles Instrument zur Lenkung der öffentlichen Meinung. Wie einst die _CIA_ ihre Tentakel in die US-Presse ausstreckte, so durchdringen heute politische Interessen die Nervenzentren der Öffentlich-Rechtlichen.
 
