--- a/blogv2/content/EC28129F49.md
+++ b/blogv2/content/EC28129F49.md
@@ -6,7 +6,7 @@ slug = 'EC28129F49'
 draft = false
 number = '5'
 edition = 'die meinung'
-categories = ["wissenschaft", "bildung"]
+themen = ["wissenschaft", "bildung"]
 +++
 In der Welt der akademischen Veröffentlichungen verbirgt sich hinter einer Fassade aus **Prestige und Tradition** ein System, das längst überholt scheint. Die der wissenschaftlichen Erkenntnisse, die täglich in Laboren und Forschungseinrichtungen weltweit gewonnen werden, bleibt allzu oft hinter digitalen Mauern verborgen, bewacht von den Giganten der Verlagswelt wie _Elsevier_ und *Springer*.
 
