--- a/blogv2/content/0925629CBC.md
+++ b/blogv2/content/0925629CBC.md
@@ -6,7 +6,7 @@ slug = '0925629CBC'
 draft = false
 number = '1'
 edition = 'die meinung'
-categories = ["medien", "politik"]
+themen = ["medien", "politik"]
 +++
 Im Schatten der Nachkriegstrümmer erblickte ein Medienimperium das Licht der Welt, das bis heute tief in den Taschen der Bürger wühlt: die öffentlich-rechtlichen Rundfunkanstalten. Unter dem **Deckmantel der "Umerziehung"** von den Alliierten ins Leben gerufen, mauserten sich _ARD_, _ZDF_ und Co. zu einem Medienkoloss, dessen selbst die kühnsten Träume der Nachkriegsplaner in den Schatten stellt. Pracht
 
