--- a/blogv2/content/229BFB03AF.md
+++ b/blogv2/content/229BFB03AF.md
@@ -6,7 +6,7 @@ slug = '229BFB03AF'
 draft = false
 number = '4'
 edition = 'die meinung'
-categories = ["politik", "gesellschaft"]
+themen = ["politik", "gesellschaft"]
 +++
 In den Straßen _Berlins_, wo einst die Mauer stand, wächst eine neue, unsichtbare Barriere. Sie trennt nicht Ost von West, sondern Links von Rechts, Liberal von Konservativ. Die politische Landschaft _Deutschlands_, einst ein Hort der Stabilität, verwandelt sich in ein **Schlachtfeld der Extreme**.
 
