--- a/blogv2/content/3BE1A6B432.md
+++ b/blogv2/content/3BE1A6B432.md
@@ -6,7 +6,7 @@ slug = '3BE1A6B432'
 draft = false
 number = '6'
 edition = 'die meinung'
-themen = [Energie, Zeitgeschichte]
+themen = ["energie", "zeitgeschichte"]
 +++
 Es war der Moment, als die **Hölle auf Erden** Realität wurde. Der Himmel über Kuwait verwandelte sich in eine pechschwarze Decke aus Qualm und Asche, während hunderte Ölquellen wie **dämonische Fackeln** in den Himmel ragten. Was sich wie eine apokalyptische Vision aus *Dantes Inferno* anhört, war im Jahr 1991 bittere Realität. *Saddam Hussein* hatte seiner drohenden Niederlage im Golfkrieg bereits im Dezember 1990 ein perfides Vermächtnis vorbereitet.
 
